fixed grid column spacing (thanks chat gpt)

--- a/styleSmall.css
+++ b/styleSmall.css
@@ -72,11 +72,18 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
     }
+    .left-column {
+        justify-self: left;
+    }
+    .right-column {
+        justify-self: right;
+    }
     .buttonDiv {
         width: 150px;
         background-color: rgba(0,71,75,255);
         color: rgba(224,254,255,255);
         border-radius: 5px;
+        font-size: 1.5rem;
     }
     .tipAmountButton {
         height: 40px;
